@@ -14,6 +14,6 @@
         "height": 112, 
         "left": 0
     }, 
-    "nframes": 39, 
+    "nframes": 42, 
     "offset": 0
 }
