@@ -28,6 +28,57 @@ enum class SpriteId : std::uint8_t
     PillarA,
     FloorLampA,
     CeilLampA,
+    FountainA,
+    FountainB,
+    FountainC,
+    ArtifactA,
+    ArtifactB,
+    ArtifactC,
+    ArtifactD,
+    WiresA,
+    WiresB,
+    WiresC,
+    WiresD,
+    PlayerRedA0,
+    PlayerRedA1,
+    PlayerRedA2,
+    PlayerRedA3,
+    PlayerRedA4,
+    PlayerRedB0,
+    PlayerRedB1,
+    PlayerRedB2,
+    PlayerRedB3,
+    PlayerRedB4,
+    PlayerRedFA0,
+    PlayerRedFA1,
+    PlayerRedFA2,
+    PlayerRedFA3,
+    PlayerRedFA4,
+    PlayerRedFB0,
+    PlayerRedFB1,
+    PlayerRedFB2,
+    PlayerRedFB3,
+    PlayerRedFB4,
+    PlayerBlueA0,
+    PlayerBlueA1,
+    PlayerBlueA2,
+    PlayerBlueA3,
+    PlayerBlueA4,
+    PlayerBlueB0,
+    PlayerBlueB1,
+    PlayerBlueB2,
+    PlayerBlueB3,
+    PlayerBlueB4,
+    PlayerBlueFA0,
+    PlayerBlueFA1,
+    PlayerBlueFA2,
+    PlayerBlueFA3,
+    PlayerBlueFA4,
+    PlayerBlueFB0,
+    PlayerBlueFB1,
+    PlayerBlueFB2,
+    PlayerBlueFB3,
+    PlayerBlueFB4,
     PlayerA0,
     PlayerA1,
     PlayerA2,
@@ -174,6 +225,9 @@ enum class EntityType
     Pillar,
     FloorLamp,
     CeilLamp,
+    Fountain,
+    Artifact,
+    Wires,
     StaticDecorationEnd,
     Player,
 
