@@ -1,6 +1,7 @@
 Rend 0.7.0 changelog:
 
 Gameplay:
+* Added new decorative items - water fountain, ceiling wires, alien artifact
 * Slightly repositioned spawn-pickups on 2p_greenpath
 * Reworked central storage area on 3p_shotgun_frenzy to allow better maneuverability
 
